--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Razan College Jurney</title>
 </head>
 <body>
     <header>
-        <img src="img/html_logo.png" alt="QU Logo" >
-        <h1>Welcome to Zahra Hassen's College Jurney at QU</h1>
+        <img src="media\images\qu-logo.jpg" alt="QU Logo" width="10%">
+        <h1>Welcome to Razan's College Jurney at QU</h1>
     </header>
 
     <hr>
@@ -28,7 +28,7 @@
 
         <section id="major">
             <h2>My Major</h2>
-            <img src="img/html_logo.png" alt="Zahra's Profile Picture" width="30%">
+            <img src="media\images\Razan's image copy.jpeg" alt="Zahra's Profile Picture" width="30%">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, placeat.
             </p>
